# z2oh.github.io

./: .gitignore  .travis.yml  404.html  CNAME  README.MD  README.md  _cobalt.yml  _footer.liquid  _menu.liquid  about.html  about.liquid  bower.json  gulpfile.js  index.html  index.liquid  lab.html  lab.liquid  manifest.json  misc.html  misc.liquid  package.json  polymer.json  projects.html  projects.liquid  style.css
.github/workflows/: deploy.yml
_dev/vinyl/: sort.py  update_post.fish  vinyl.csv
_includes/: _footer.liquid  _head.liquid  _menu.liquid
_layouts/: default.liquid  empty.liquid  post-math.liquid  post.liquid
_posts/misc/: vinyl.md
_posts/projects/: chromatic_confinment.liquid  gTAB.liquid  photo-vue.liquid
posts/blog/: combining-image-segmentation-and-seam-carving-for-automated-object-removal.html  combining-image-segmentation-and-seam-carving-for-automated-object-removal.md  k-d-tree.html  k-d-tree.md  rust-101.md  rust-firefox-shortcuts.html  rust-firefox-shortcuts.md  spring-2018-code-a-thon-solutions.html  spring-2018-code-a-thon-solutions.md
posts/lab/: 2xtrainer.html  2xtrainer.liquid
posts/misc/: vinyl.html  vinyl.md
posts/projects/: RedditBackgrounder.liquid  chromatic_confinment.html  chromatic_confinment.liquid  gTAB.html  gTAB.liquid  gulp-tabify.liquid  jaday.io.html  jaday.io.liquid  photo-vue.liquid  rp.html  rp.liquid  sexe.html  (+1 more)
tools/bssg/: Cargo.toml
tools/bssg/src/: main.rs  util.rs
tools/bssg/src/builder/: lazy_cache.rs  mod.rs
tools/bssg/src/builder/transformers/: handlebars.rs  mod.rs
www/: index.html  redirects
(+20 files in other folders)
