[package]
name = "bssg"
version = "0.0.0"
authors = ["Jeremy Day <self@jaday.io>"]
edition = "2021"
description = "A bespoke static site generator for jaday.io"

[dependencies]
walkdir = "2.5.0"
anyhow = "1.0.86"
rayon = "1.10.0"
log = "0.4.22"
colog = "1.3.0"
handlebars = "6.0.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.128"
quick_cache = "0.6.6"